# Di-Hive

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.az-delivery-devkit-v4  sdkconfig.old
components/adc_manager/: CMakeLists.txt  adc_man.c
components/blue_manager/: CMakeLists.txt  blue_manager.c
components/camera_manager/: CMakeLists.txt  camera_man.c
components/http_prov/: CMakeLists.txt  http_prov.c
components/http_prov/include/: http_prov.h
components/lib_helpers/: CMakeLists.txt
components/mic_man/: CMakeLists.txt  mic_man.c
components/mqtt_manager/: CMakeLists.txt  mqtt_man.c
components/mqtt_manager/include/: mqtt_man.h
components/nvs-manager/: CMakeLists.txt  nvs_manager.c
components/nvs_manager/: CMakeLists.txt  nvs_man.c  nvs_manager.c
components/ota_manager/: CMakeLists.txt
components/sd_manager/: CMakeLists.txt  sd_man.c
components/sensors_manager/: CMakeLists.txt  sensors_man.c
components/ssd1306/: CMakeLists.txt
components/web_example/: CMakeLists.txt  web_example.c
components/web_provisioning/: CMakeLists.txt  web_provisioning.c
components/weight_sensor/: CMakeLists.txt
components/wifi-manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
components/wifi_manager/: CMakeLists.txt  wifi_man.c  wifi_man_ap.c  wifi_man_sta.c  wifi_manager.c
components/wifi_manager/include/: wifi_man.h  wifi_man_ap.h  wifi_man_sta.h  wifi_manager.h
data/: index.html
ignored/: OTA_Attempt.cpp
main/: main.c  main.cpp  prototype_1_main.cpp
src/: main.c
webpages/: index.css  index.html
(+27 files in other folders)
